[tool.poetry]
name = "ip_object_browser"
version = "0.1.0"
description = ""
authors = ["Roee Nizan <roeen30@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
urwid = "^2.1.2"
boltons = "^20.2.1"
ipython = "^7.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
